--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,30 @@
 @import url('./font.css');
 @import url('./reset.css');
 
+:root {
+  --primary-color: #cbfb45;
+  --secondary-color: #131514;
+  --tertiary-color: #fff;
+}
+/* fontsize */
+h2 {
+  font-size: clamp(3.2rem, 0.546rem + 8.293vw, 10rem);
+  font-weight: 900;
+}
+h3 {
+  font-size: clamp(1.6rem, 1.288rem + 0.976vw, 2.4rem);
+  font-weight: 700;
+}
+h4 {
+  font-size: clamp(1.4rem, 1.244rem + 0.488vw, 1.8rem);
+  font-weight: 500;
+}
+
 html,
 body {
   font-family: 'SUIT', -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-  color: #fff;
-  background-color: #131514;
+  color: var(--tertiary-color);
+  background-color: var(--secondary-color);
   width: 100%;
   height: 100%;
   font-size: 10px;
@@ -22,13 +41,14 @@ body {
 
 .inner {
   max-width: 1140px;
+  width: 100%;
   margin: 0 auto;
 }
-@media screen and (max-width: 1200px) {
+/* @media screen and (max-width: 1200px) {
   .inner {
     width: calc(100% - 6rem);
   }
-}
+} */
 
 .hero {
   width: 100%;
@@ -59,11 +79,6 @@ body {
   font-size: clamp(1.6rem, 1.249rem + 1.098vw, 2.5rem);
 }
 
-.visual .visual-title {
-  font-weight: 900;
-  font-size: clamp(3.2rem, 0.546rem + 8.293vw, 10rem);
-}
-
 .visual-introwrap {
   text-align: center;
   width: 100%;
@@ -80,7 +95,7 @@ body {
   justify-content: space-between;
   gap: 1rem;
   padding: 3rem 10rem 0;
-  color: #fff;
+  color: var(--tertiary-color);
 }
 
 .visual-list .list-item {
@@ -105,7 +120,7 @@ body {
   font-weight: 700;
 }
 .myname {
-  color: #49b9c0;
+  color: var(--primary-color);
   font-weight: 700;
 }
 
@@ -123,9 +138,9 @@ body {
 /* intro */
 .intro {
   position: relative;
-  z-index: 10;
-  background: #49b9c0;
-  padding: 6rem 0 8rem;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  padding: 6rem 8rem;
   display: flex;
   justify-content: center;
 }
@@ -165,12 +180,12 @@ body {
   right: -1.2rem;
   width: 0.1rem;
   height: 70%;
-  background-color: white;
+  background-color: var(--secondary-color);
 }
 
 .intro-link span {
   font-size: clamp(1.4rem, 1.166rem + 0.732vw, 2rem);
-  color: #fff;
+  color: var(--secondary-color);
   margin: 0.3rem;
 }
 .intro-desc {
@@ -202,25 +217,30 @@ body {
 /* information */
 .information {
   position: relative;
-  z-index: 10;
-  background: #131514;
-  padding: 6rem 0 8rem;
-  display: flex;
-  justify-content: center;
+  background-color: var(--secondary-color);
+  padding: 6rem 8rem;
 }
+
+.info {
+  font-size: clamp(2.8rem, 1.551rem + 3.902vw, 6rem);
+  margin-bottom: 6rem;
+}
+
 .info-career {
-  display: flex;
-  justify-content: center;
   width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
+
 .info-img {
-  width: 25rem;
+  width: 24rem;
   border-radius: 50%;
 }
+
 .career-item {
   margin-bottom: 2rem;
   padding-left: 1.5rem;
-  border-left: 0.2rem solid #49b9c0;
+  border-left: 0.2rem solid var(--primary-color);
   position: relative;
 }
 
@@ -231,8 +251,12 @@ body {
   top: 0;
   width: 1.2rem;
   height: 1.2rem;
-  background: #49b9c0;
+  background: var(--primary-color);
   border-radius: 50%;
+}
+
+.career-title {
+  margin-bottom: 0.5rem;
 }
 
 .career-date {
@@ -242,24 +266,27 @@ body {
   font-weight: 300;
   margin-bottom: 0.5rem;
 }
-
 .career-company {
-  font-size: clamp(1.6rem, 1.288rem + 0.976vw, 2.4rem);
-  font-weight: 700;
+  margin: 1rem 0 0.5rem 0;
+  color: #c7c7c7;
+  font-weight: 500;
 }
-
 .career-role {
-  font-size: clamp(1.4rem, 1.244rem + 0.488vw, 1.8rem);
-  color: #fafafa;
+  font-size: clamp(1.2rem, 1.122rem + 0.244vw, 1.4rem);
+  color: #c7c7c7;
   display: block;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .project-list {
   list-style: disc;
   margin-left: 1.5rem;
-  color: #555;
+  color: var(--tertiary-color);
 }
-.project-list li {
+.project-list > li {
   font-size: clamp(1.4rem, 1.322rem + 0.244vw, 1.6rem);
+  line-height: 2;
+}
+.project-list > li > .list-item > li {
+  line-height: 1.2;
 }
